test/language/errors/errors_global.hm
# 8
# undefined global variable 'foo'

use "errors"

let foo = 8

try {
  echo foo
  delete(GLOBALS, "foo")
  echo foo
} except e { echo runtime(e) }
